tests/reference/ast-program_without_line_03-e127d69.stderr
syntax error: Only function, subroutine, procedure, module, submodule or block data allowed in global scope in non-interactive mode
 --> tests/errors/program_without_line_03.f90:3:1
  |
3 | print *, "OK"
  | ^^^^^^^^^^^^^ 
